--- a/app/src/main/res/layout/fragment_admin_dashboard.xml
+++ b/app/src/main/res/layout/fragment_admin_dashboard.xml
@@ -7,17 +7,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.AdminDashboardFragment">
 
-    <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/AdminDashBoardSwitch"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:thumb="@drawable/thumb"
-        app:track="@drawable/track"
-        app:showText="true"
-        android:textOn="Placed Applications"
-        android:textOff="All Applications"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp" />
+        android:layout_margin="25dp"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="20dp"
+        android:backgroundTint="@color/purple">
+
+       <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center_horizontal">
+
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/AdminDashBoardSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:showText="true"
+                android:textOn="Placed Applications"
+                android:textOff="All Applications"
+                android:layout_gravity="center"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black"
+                android:layout_marginTop="30dp" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
 
     <FrameLayout
         android:id="@+id/AdminDashBoardContainer"
