--- a/app/src/main/res/layout/single_data_file.xml
+++ b/app/src/main/res/layout/single_data_file.xml
@@ -10,12 +10,12 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:padding="20dp"
+        android:backgroundTint="@color/white"
         app:cardCornerRadius="30dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/cardColor"
             android:orientation="vertical">
 
 
@@ -25,6 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:text="Title"
+                android:textColor="@color/purple"
                 android:textSize="24dp"
                 android:textStyle="bold" />
 
@@ -34,6 +35,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:text="Description"
+              android:textColor="@color/purple"
+
                 android:textSize="35dp" />
 
 
